--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ out/
 
 # Local configuration file (sdk path, etc)
 local.properties
+private.properties
 
 # Eclipse project files
 .classpath
@@ -33,6 +34,3 @@ local.properties
 # Keystore and properties
 *.keystore
 keystore.properties
-
-FictionDL.jar
-FictionDL-old.jar
