--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: java
 
+jdk:
+- oraclejdk8
+- oraclejdk9
+
+script:
+- ./gradlew check --info
+- ./gradlew javadoc
+
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
