--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'signing'
 
 group = 'io.github.java-diff-utils'
 archivesBaseName = 'java-diff-utils'
-version = '2.2.0-SNAPSHOT'
+version = '2.2.0'
 
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
